# Orderer

./: CMakeLists.txt  README.md  adminlogin.cpp  adminlogin.h  adminlogin.ui  backend.cpp  backend.h  backend.ui  clientdbview.cpp  clientdbview.h  clientdbview.ui  dbmanager.cpp  dbmanager.h  dealorder.cpp  dealorder.h  dealorder.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  myorder.cpp  myorder.h  myorder.ui  orderdetails.cpp  orderdetails.h  orderdetails.ui  picture.qrc  registering.cpp  registering.h  registering.ui  statisticaltable.cpp  statisticaltable.h  statisticaltable.ui  tcpclient.cpp  (+3 more)
